# yurunavi

./: AUDIT_REPORT.md  CLAUDE.md  MORNING_REPORT.md  NIGHT_TASK.md  README.md  build_errors.md  pubspec.yaml
.claude/agents/: code-auditor.md  flutter-coder.md  rust-coder.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/yurunavi/: MainActivity.kt
docker/: docker-compose.yml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/theme/: app_theme.dart
lib/core/widgets/: daylight_bar.dart
lib/features/map/presentation/: main_map_screen.dart
lib/features/map/providers/: map_providers.dart
lib/features/navigation/presentation/: nav_screen.dart
lib/screens/: driving_screen.dart  intro_screen.dart
lib/services/: connectivity_service.dart  map_cache_provider.dart  native_engine.dart  routing_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  main.rs
test/features/map/: saved_route_type_safety_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
