[package]
name = "yurunavi_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "yurunavi_native"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "yurunavi_server"
path = "src/main.rs"

[dependencies]
flutter_rust_bridge = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
